fix(agentic-ai): correctly serialize agent card as tool description